fixed friends overflow

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -107,9 +107,10 @@
 @media (max-width: 640px) {
 
   .header {
-    height: 60px;
+    height: 100vh;
     max-width: 100%;
     position: absolute;
+    overflow: hidden;
   }
 
   .socials {
